
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "maven",
    artifacts = [
        "io.netty:netty-buffer:4.1.110.Final",
        "io.netty:netty-codec-haproxy:4.1.110.Final",
        "io.netty:netty-codec-http2:4.1.110.Final",
        "io.netty:netty-codec-http:4.1.110.Final",
        "io.netty:netty-codec-redis:4.1.110.Final",
        "io.netty:netty-codec:4.1.110.Final",
        "io.netty:netty-common:4.1.110.Final",
        "io.netty:netty-handler-proxy:4.1.110.Final",
        "io.netty:netty-handler:4.1.110.Final",
        "io.netty:netty-resolver:4.1.110.Final",
        "io.netty:netty-tcnative-boringssl-static:2.0.62.Final",
        "io.netty:netty-transport-classes-epoll:4.1.110.Final",
        "io.netty:netty-transport-native-epoll:4.1.110.Final",
        "io.netty:netty-transport-native-epoll:jar:linux-x86_64:4.1.110.Final",
        "io.netty:netty-transport-native-unix-common:4.1.110.Final",
        "io.netty:netty-transport:4.1.110.Final",
    

    ],
    fetch_sources = True,
    lock_file = "//:maven_install.json",
    repositories = [
        # we should now be able to pull all dependencies via maven-virtual
    ],
    fail_if_repin_required = True,
    version_conflict_policy = "pinned",
)

use_repo(maven, "maven")
